--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 file-pattern filter=lfs diff=lfs merge=lfs -text
 my-profile filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
